--- a/src/App.css
+++ b/src/App.css
@@ -58,6 +58,8 @@ table {
   align-items: center;
   height: 100vh;
   justify-content: center;
+  overflow: hidden;
+  font-family: 'Noto Sans KR', sans-serif;
 }
 
 .main-container {
@@ -68,8 +70,9 @@ table {
   height: 85%;
   top: 30%;
   z-index: 1;
-  transition: 5s;
+  transition: all .85s cubic-bezier(.77,0,.175,1);
 }
+
 
 .main-left, .main-right {
   position: absolute;
@@ -84,11 +87,21 @@ table {
 }
 
 .dummy {
-  background-image: url(./image/IMG_1786.jpeg);
+  background-color: rgb(172, 172, 125);
   background-size: cover;
+  display: flex;
   width: 60%;
   height: 95%;
+  overflow: hidden;
+  align-items: center;
 }
+
+.dummy img {
+  width: 110%;
+  height: auto;
+  margin-top: 10em;
+}
+
 /*
 .Sidebar {
   background-color: rgb(10, 10, 10);
@@ -132,10 +145,10 @@ table {
   color: white;
   padding-left: 3rem;
   padding-right: 1rem;
-  font-size: 1.4em;
+  font-size: 1.2em;
   line-height: 1.5em;
   justify-content: space-between;
-  transition: all 0.3s;
+  transition: all .85s cubic-bezier(.77,0,.175,1);
   transform: translate(0%);
 }
 
@@ -147,15 +160,15 @@ table {
   color: white;
   padding-left: 3rem;
   padding-right: 1rem;
-  font-size: 1.4em;
+  font-size: 1.2em;
   line-height: 1.5em;
   justify-content: space-between;
-  transition: all 0.3s;
+  transition: all .85s cubic-bezier(.77,0,.175,1);
   transform: translate(100%);
 }
 
 .intro, .school, .address, .get-in-touch {
-  margin-bottom: 3em;
+  margin-bottom: 4em;
 }
 
 .school p, .address p, .get-in-touch p {
@@ -169,13 +182,14 @@ table {
 }
 
 .intro {
-  margin-top: 2em;
+  margin-top: 6em;
 }
 
 .Sidebar-nav {
   text-align: left;
 }
 .Sidebar-nav div{
+  margin-top: 2em;
   font-size: 0.7em;
 }
 
