--- a/src/App.css
+++ b/src/App.css
@@ -95,68 +95,29 @@ table {
 
 .dummy {
   background-color: rgb(172, 172, 125);
-  background-size: cover;
-  display: flex;
   width: 60%;
   height: 95%;
   overflow: hidden;
-  align-items: center;
   transition: all .30s cubic-bezier(.77,0,.175,1);
+  display: flex;
+  align-items: center;
+  box-shadow: 1px 1px 10px rgb(59, 59, 59);
 }
 
 .dummy img {
-  width: 110%;
-  height: auto;
-  margin-top: 10em;
-  z-index: 200;
+  width: 100%;
   transition: all .30s cubic-bezier(.77,0,.175,1);
 }
 
 .dummy img:hover {
   filter: brightness(30%);
-  transition: all .35s cubic-bezier(.77,0,.175,1);
+  transition: all .30s cubic-bezier(.77,0,.175,1);
 }
 .dummy:hover {
-  width: 75%;
+  width: 70%;
   transition: all .30s cubic-bezier(.77,0,.175,1);
 }
 
-
-/*
-.Sidebar {
-  background-color: rgb(10, 10, 10);
-  display: flex;
-  left: 60%;
-  width: 40%;
-  height: 100%;
-  z-index: 2;
-  color: white;
-  padding: 2rem;
-  padding-left: 3rem;
-  padding-right: 1rem;
-  font-size: 1.4em;
-  line-height: 1.5em;
-  justify-content: space-between;
-  transform:translate(200px,0);
-}
-
-.Sidebar-off {
-  background-color: rgb(10, 10, 10);
-  display: none;
-  left: 60%;
-  width: 40%;
-  height: 100%;
-  z-index: 2;
-  color: white;
-  padding: 2rem;
-  padding-left: 3rem;
-  padding-right: 1rem;
-  font-size: 1.4em;
-  line-height: 1.5em;
-  justify-content: space-between;
-  transform:translate(200px,0);
-}
-*/
 .Sidebar {
   width: 40%;
   height: 100%;
@@ -246,6 +207,11 @@ table {
   position: absolute;
   top: 2em;
   right: 2em;
+}
+
+.Title-profile:hover {
+  cursor: pointer;
+  text-decoration: underline rgb(0, 0, 0);
 }
 
 .Title-name {
