change starting page font

--- a/src/App.css
+++ b/src/App.css
@@ -52,7 +52,8 @@ table {
 }
 
 .root {
-  transition: all .85s cubic-bezier(.77,0,.175,1);
+  overflow: hidden;
+  
 }
 
 .App {
@@ -64,6 +65,17 @@ table {
   font-family: 'Noto Sans KR', sans-serif;
   overflow: hidden;
   transition: all .85s cubic-bezier(.77,0,.175,1);
+  animation-duration: 1s;
+  animation-name: slidein;
+}
+
+@keyframes slidein {
+  0% {
+    margin-right: 100vw;
+  }
+  100% {
+    margin-right: 0vw;
+  }
 }
 
 .Start-wrap {
@@ -74,11 +86,16 @@ table {
   align-items: center;
   justify-content: center;
   transition: all .85s cubic-bezier(.77,0,.175,1);
+  font-family: 'Raleway', sans-serif;
 }
 
 .Start-name {
   display: block;
   font-size: 5em;
+}
+
+.Start-desc {
+  font-size: 1.5em;
 }
 
 .main-container {
