add main image hover text

--- a/src/App.css
+++ b/src/App.css
@@ -64,18 +64,6 @@ table {
   justify-content: center;
   font-family: 'Noto Sans KR', sans-serif;
   overflow: hidden;
-  transition: all .85s cubic-bezier(.77,0,.175,1);
-  animation-duration: 1s;
-  animation-name: slidein;
-}
-
-@keyframes slidein {
-  0% {
-    margin-right: 100vw;
-  }
-  100% {
-    margin-right: 0vw;
-  }
 }
 
 .Start-wrap {
@@ -85,7 +73,6 @@ table {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  transition: all .85s cubic-bezier(.77,0,.175,1);
   font-family: 'Raleway', sans-serif;
 }
 
@@ -140,18 +127,43 @@ table {
   box-shadow: 1px 1px 10px rgb(59, 59, 59);
 }
 
-.dummy img {
+.img {
   width: 100%;
   transition: all .30s cubic-bezier(.77,0,.175,1);
 }
 
-.dummy img:hover {
+.img-hover {
+  width: 100%;
   filter: brightness(30%);
   transition: all .30s cubic-bezier(.77,0,.175,1);
 }
 .dummy:hover {
   width: 70%;
   transition: all .30s cubic-bezier(.77,0,.175,1);
+}
+
+.img-info {
+  position: absolute;
+  left: 0px;
+  width: 100%;
+  text-align: center;
+  color: rgb(233, 233, 233);
+  font-weight: 600;
+}
+.img-title, .img-stack, .img-desc {
+  display: block;
+}
+.img-title {
+  font-weight: 900;
+  font-size: 2em;
+  margin-bottom: 2em;
+}
+.img-stack {
+  margin-bottom: 1.5em;
+}
+.img-desc {
+  font-weight: 600;
+  color: white;
 }
 
 .Sidebar {
