--- a/src/App.css
+++ b/src/App.css
@@ -64,6 +64,7 @@ table {
   justify-content: center;
   font-family: 'Noto Sans KR', sans-serif;
   overflow: hidden;
+  transition: all .85s cubic-bezier(.77,0,.175,1);
 }
 
 .Start-wrap {
@@ -74,6 +75,7 @@ table {
   align-items: center;
   justify-content: center;
   font-family: 'Raleway', sans-serif;
+  transition: all .85s cubic-bezier(.77,0,.175,1);
 }
 
 .Start-name {
