--- a/src/App.css
+++ b/src/App.css
@@ -78,6 +78,18 @@ table {
   transition: all .85s cubic-bezier(.77,0,.175,1);
 }
 
+.Start-wrap-blank {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-family: 'Raleway', sans-serif;
+  transition: all .85s cubic-bezier(.77,0,.175,1);
+  opacity: 0;
+}
+
 .Start-name {
   display: block;
   font-size: 5em;
